--- a/config/database.yml
+++ b/config/database.yml
@@ -20,8 +20,5 @@ test:
 
 production:
   <<: *default
-  database: youtube_production
-  username: <%= ENV["DB_USERNAME"] %>
-  password: <%= ENV["DB_PASSWORD"] %>
-  host: <%= ENV["DB_HOST"] %>
-  port: <%= ENV["DB_PORT"] { 5432 } %>
+  url: <%= ENV['DATABASE_URL'] %>
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
